# halos-mdns-publisher

./: .bumpversion.cfg  .gitignore  AGENTS.md  Cargo.toml  README.md  lefthook.yml  publish-subdomains.sh  run
.github/actions/build-deb/: action.yml
.github/actions/check-versions/: action.yml
.github/actions/run-tests/: action.yml
.github/scripts/: build-deb-package.sh  rename-packages.sh
.github/workflows/: main.yml  release.yml
debian/: changelog  control  copyright  halos-mdns-publisher.lintian-overrides  halos-mdns-publisher.service  mdns.allow  postinst  postrm  rules
docker/: Dockerfile.debtools
src/: avahi_manager.rs  config.rs  container_watcher.rs  error.rs  ip_monitor.rs  main.rs
